--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Events{% endblock %}</title>
+    <!-- TODO: Title dynamic changes -->
     {% with url_name=request.resolver_match.url_name %}
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     <!-- Background styling, link to static files -->
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -69,8 +77,8 @@
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp; Register
                     </a>
                 </li>
-                <li class= "dropdown {% if url_name == 'login_request' %}active{% endif %}">
-                    <a href="{% url 'events:login_request' %}">
+                <li class= "dropdown {% if url_name == 'login' %}active{% endif %}">
+                    <a href="{% url 'events:login' %}">
                         <span class="glyphicon glyphicon-console" aria-hidden="true"></span>&nbsp; Login
                     </a>
                 </li>
@@ -84,6 +92,7 @@
           </div>
         </div>
     </nav>
+    <h3>Hello, {{user.get_username}}</h3>
     {% block main %}
     {% endblock %}
 </body>
