--- a/events/templates/events/event_form.html
+++ b/events/templates/events/event_form.html
@@ -16,7 +16,7 @@
                 <div class="panel-body">
                     <form class="form-horizontal" action="" method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
-                        {% include 'events/form-template.html' %}
+                        {% include 'events/form_template.html' %}
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
                                 <button type="submit" class="btn btn-success">Submit</button>
