Adding testing logic

--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -43,7 +43,7 @@
             </li>
             </ul>
             <form name = "search_form" class="navbar-form navbar-left" role="search" method="GET" action="">
-                <!-- {% csrf_token %} -->
+                {% csrf_token %}
                 <div class="form-group">
                     <input type="text" class="form-control" name ="query" value="">
                 </div>
