--- a/events/templates/events/search.html
+++ b/events/templates/events/search.html
@@ -1,5 +1,5 @@
 
-        <ul>
+        <ul>#TODO: Fix search
             {% for event in event_list %}
             <li>{{ event.name }}</li>
             <li>{{ event.description }}</li>
