--- a/events/templates/events/note_form.html
+++ b/events/templates/events/note_form.html
@@ -9,6 +9,7 @@
 
 
 {% block main %}
+{% if user.is_authenticated %}
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12 col-md-7">
@@ -31,4 +32,5 @@
     </div>
 
 </div>
+{% endif %}
 {% endblock %}
