--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -1,7 +1,7 @@
 {% extends 'events/base.html'%}
     {% block main %}
         <ul>
-            {% for event in event_list %}
+            {% for event in user.eventlist.all %}
             <li><a href="{% url 'events:detail' event.id %}">{{ event.name }}</a></li>
             <li>{{ event.description }}</li>
             <form action="{% url 'events:event-delete' event.id %}" method="post" style="display:inline;">
