--- a/events/templates/events/tasks.html
+++ b/events/templates/events/tasks.html
@@ -14,6 +14,7 @@
                     <span class="glyphicon glyphicon-trash"></span>
                 </button>
             </form>
+            <!-- TODO: Add tasks underneath each event in a table or ul -->
             {% endfor %}
         </ul>
     {% endblock %}
