--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -41,7 +41,7 @@
                 </a>
             </li>
             </ul>
-            <form name = "search_form" class="navbar-form navbar-left" role="search" method="GET" action="">
+            <form name = "search_form" class="navbar-form navbar-left" role="search" method="GET" action="{% url 'events:search' %}">
                 {% csrf_token %}
                 <div class="form-group">
                     <input type="text" class="form-control" name ="query" value="">
